--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "firebase": "^4.10.1",
     "md5": "^2.2.1",
+    "mime-types": "^2.1.18",
     "moment": "^2.21.0",
+    "uuid": "^3.2.1",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
